--- a/08-cadrage-ia.html
+++ b/08-cadrage-ia.html
@@ -83,7 +83,7 @@
 						<p>
 							<blockquote>
 								<img src="images/info.png" width="35" height="35"/>
-								<span><b>Retrouvez tous les fichiers associ&eacute;s &agrave; ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+								<span><b>Retrouvez tous les fichiers associ&eacute;s &agrave; ce projet sur <a href="https://github.com/BiGHeaDMaX/Cadrer-Un-Projet-IA" target="_blank">mon GitHub</a></b></span>
 							</blockquote>
 						</p>
 						<br>
@@ -489,7 +489,7 @@
 						<p>
 							<blockquote>
 								<img src="images/info.png" width="35" height="35"/>
-								<span><b>Retrouvez tous les fichiers associ&eacute;s &agrave; ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+								<span><b>Retrouvez tous les fichiers associ&eacute;s &agrave; ce projet sur <a href="https://github.com/BiGHeaDMaX/Cadrer-Un-Projet-IA" target="_blank">mon GitHub</a></b></span>
 							</blockquote>
 						</p>
 						<br><br>
