--- a/06-extraction-mots-cles.html
+++ b/06-extraction-mots-cles.html
@@ -49,7 +49,7 @@
 						<li><a href="04-suggestion-mots-cles.html">Suggestion automatique de mots-cl&eacute;s</a></li>
 						<li><a href="05-classer-des-images.html">Identifier des races de chiens sur des photos avec TensorFlow</a></li>
 						<li><a href="06-extraction-mots-cles.html">Nouvelles méthodes d'extraction de mots-cl&eacute;s</a></li>
-						<li><a href="07-traitement-aws-spark.html">R&eacute;aliser un traitement Big Data avec Spark</a></li>
+						<li><a href="07-traitement-aws-spark.html">Extraction de features sur des donn&eacute;es massives avec Spark</a></li>
 						<li><a href="08-cadrage-ia.html">R&eacute;aliser le cadrage d'un projet IA</a></li>
 					</ul>
 			</nav>
