--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<li><a href="04-suggestion-mots-cles.html">Suggestion automatique de mots-cl&eacute;s</a></li>
 								<li><a href="05-classer-des-images.html">Identifier des races de chiens sur des photos avec TensorFlow</a></li>
 								<li><a href="06-extraction-mots-cles.html">Nouvelles méthodes d'extraction de mots-cl&eacute;s</a></li>
-								<li><a href="07-traitement-aws-spark.html">R&eacute;aliser un traitement Big Data avec Spark</a></li>
+								<li><a href="07-traitement-aws-spark.html">Extraction de features sur des donn&eacute;es massives avec Spark</a></li>
 								<li><a href="08-cadrage-ia.html">R&eacute;aliser le cadrage d'un projet IA</a></li>
 							</ul>
 					</nav>
@@ -163,12 +163,14 @@
 										<img src="images/vignettes/vignettes_cloud.jpg" alt="" />
 									</span>
 									<a href="07-traitement-aws-spark.html">
-									<span><mark class="mark-titre"><h2>R&eacute;aliser un traitement Big Data avec Spark</h2></mark></span>
+									<span><mark class="mark-titre"><h2>Extraction de features sur des donn&eacute;es massives avec Spark</h2></mark></span>
 										<div class="content">
 										<mark class="mark-keyword">Spark</mark>
 										<mark class="mark-keyword">Hadoop</mark>
 										<mark class="mark-keyword">AWS</mark>
 										<mark class="mark-keyword">Features Extraction</mark>
+										<mark class="mark-keyword">Transfer Learning</mark>
+										<mark class="mark-keyword">PCA</mark>
 										</div>
 									</a>
 								</article>
